add sql Fix image url

--- a/game_flix/WebContent/index.html
+++ b/game_flix/WebContent/index.html
@@ -48,13 +48,13 @@ document.write(unescape("%"+"3Cscript src='" + tocplusHost + "kr03.tocplus007.co
         <footer>
             <ul >
                 <li class="footer_li1">  
-                    <a href="https://www.instagram.com/?hl=ko"><img src="../images/ins.png" width="30px"></a></li>
+                    <a href="https://www.instagram.com/?hl=ko"><img src="images/ins.png" width="30px"></a></li>
                 <li> 
-                    <a href="https://twitter.com/explore"><img src="../images/tw.png" width="30px"></a></li>
+                    <a href="https://twitter.com/explore"><img src="images/tw.png" width="30px"></a></li>
                 <li>
-                    <a href="http://www.youtube.com"><img src="../images/you.png" width="30px" height="30"></a></li>
+                    <a href="http://www.youtube.com"><img src="images/you.png" width="30px" height="30"></a></li>
                 <li class="footer_li4" > 
-                    <a href="https://www.facebook.com/"><img src="../images/face.png" width="30px" ></a></li>
+                    <a href="https://www.facebook.com/"><img src="images/face.png" width="30px" ></a></li>
             </ul>
             <p>G A M E F L I X</p>
         </footer>
